--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@edgedb/auth-nextjs": "^0.2.0",
+    "@headlessui/react": "^1.7.19",
     "edgedb": "^1.5.4",
     "next": "14.2.3",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18"
   },
   "devDependencies": {
