--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@edgedb/generate": "^0.5.3",
