fix(color picker): issues with readonly and when selecting a color

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@headlessui/react": "^1.7.19",
     "@headlessui/tailwindcss": "^0.2.0",
     "@types/color": "^3.0.6",
+    "@types/lodash": "^4.17.0",
     "color": "^4.2.3",
     "edgedb": "^1.5.4",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "react": "^18",
     "react-colorful": "^5.6.1",
