--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
+    "react-zoom-pan-pinch": "^3.4.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
