--- a/package.json
+++ b/package.json
@@ -14,16 +14,23 @@
     "@headlessui-float/react": "^0.13.3",
     "@headlessui/react": "^1.7.19",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/color": "^3.0.6",
     "@types/lodash": "^4.17.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "color": "^4.2.3",
     "edgedb": "^1.5.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
+    "react-icons": "^5.2.0",
     "react-zoom-pan-pinch": "^3.4.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
