--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui-float/react": "^0.13.3",
     "@headlessui/react": "^1.7.19",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/color": "^3.0.6",
     "@types/lodash": "^4.17.0",
